# openmeteo-weather-mcp

./: .gitignore  README.md  pyproject.toml
openmeteo_weather/: __init__.py  openmeteo_weather.py
